# diagnostics

./: CMakeLists.txt  Directory.Build.props  NuGet.config  debuggees.sln  diagnostics.sln  diagnostics.yml  global.json  pipeline.groovy
src/: CMakeLists.txt  sos-packaging.props
src/Microsoft.Diagnostics.DebugServices/: CharToLineConverter.cs  IConsoleService.cs  IManagedModuleService.cs  IRuntime.cs  ISettingsService.cs  ISymbolService.cs  ServiceAttribute.cs
src/Microsoft.Diagnostics.DebugServices.Implementation/: AssemblyResolver.cs  CaptureConsoleService.cs  CommandService.cs  ContextService.cs  DiagnosticLoggingService.cs  DictionaryExtensions.cs  DumpTargetFactory.cs  Host.cs  ImageMappingMemoryService.cs  LiveTargetFactory.cs  ManagedModuleService.cs  ModuleServiceFromDataReader.cs  Runtime.cs  ServiceInjector.cs  ServiceManager.cs  ServiceProvider.cs  SymbolService.cs  Target.cs  Thread.cs  ThreadService.cs  ThreadServiceFromDataReader.cs
src/Microsoft.Diagnostics.ExtensionCommands/: AnalyzeOOMCommand.cs  DumpHeapCommand.cs  FinalizeQueueCommand.cs  Microsoft.Diagnostics.ExtensionCommands.csproj
src/Microsoft.Diagnostics.ExtensionCommands/Host/: HelpCommand.cs  LoadCommand.cs  LoggingCommand.cs  ModulesCommand.cs  RuntimesCommand.cs  StackTraceCommand.cs  StackTraceService.cs  StatusCommand.cs  TargetsCommand.cs  TestDataWriter.cs  WriteTestData.cs
src/Microsoft.Diagnostics.ICorDebugServices/: LiveTargetFactory.cs  Microsoft.Diagnostics.ICorDebugServices.csproj  ModuleServiceFromICorDebug.cs  TargetFromICorDebug.cs  ThreadServiceFromICorDebug.cs
src/Microsoft.Diagnostics.ICorDebugServices/Interop/: ClrDebuggingProcessFlags.cs  ClrDebuggingVersion.cs  CorDebugThreadState.cs  CorDebugUserState.cs  DbgShimAPI.cs  ICLRDebugging.cs  ICorDebug.cs  ICorDebugEnum.cs  ICorDebugProcess.cs  ICorDebugRegisterSet.cs  ICorDebugThread.cs  ManagedCallbackWrapper.cs
src/Microsoft.Diagnostics.NETCore.Client/: Microsoft.Diagnostics.NETCore.Client.csproj
src/Microsoft.Diagnostics.NETCore.Client/DiagnosticsClient/: DiagnosticsClient.cs
src/Microsoft.Diagnostics.NETCore.Client/DiagnosticsIpc/: IpcCommands.cs
src/Microsoft.Diagnostics.Repl/: ConsoleService.cs
src/Microsoft.Diagnostics.TestHelpers/: CsprojBuildDebuggeeTestStep.cs  DotNetBuildDebuggeeTestStep.cs  Microsoft.Diagnostics.TestHelpers.csproj  ProcessRunner.cs  RemoteExecutorHelper.cs  TestConfiguration.cs
src/Microsoft.Diagnostics.TestHelpers/TestHost/: TestDump.cs  TestHost.cs
src/Microsoft.SymbolStore/: Microsoft.SymbolStore.csproj
src/SOS/: CMakeLists.txt  lldb.cmake
src/SOS/SOS.Extensions/: ConsoleServiceFromDebuggerServices.cs  DebuggerOutputService.cs  DebuggerServices.cs  HostServices.cs  MemoryRegionServiceFromDebuggerServices.cs  ModuleServiceFromDebuggerServices.cs  SOS.Extensions.csproj  TargetFromFromDebuggerServices.cs  ThreadServiceFromDebuggerServices.cs
src/SOS/SOS.Hosting/: CorDebugDataTargetWrapper.cs  DataTargetWrapper.cs  HostWrapper.cs  LLDBServices.cs  OutputServiceWrapper.cs  RuntimeWrapper.cs  SOSHost.cs  SOSLibrary.cs  SymbolServiceExtensions.cs  SymbolServiceWrapper.cs  TargetWrapper.cs
src/SOS/SOS.UnitTests/: SOS.UnitTests.csproj  SOS.cs  SOSRunner.cs
src/SOS/Strike/: CMakeLists.txt  Strike.vcxproj  Strike.vcxproj.filters  dbgengservices.cpp  dbgengservices.h  disasm.cpp  disasmX86.cpp  exts.cpp  exts.h  sosdocs.txt  sosdocsunix.txt  sosextensions.cpp  sosextensions.h  stressLogDump.cpp  strike.cpp  strike.h  symbols.cpp  symbols.h  util.cpp  util.h
src/SOS/extensions/: CMakeLists.txt  extensions.cpp  extensions.h  extensions.vcxproj  extensions.vcxproj.filters  hostcoreclr.cpp
src/SOS/inc/: debuggerservices.h  host.h  hostservices.h  lldbservices.h  outputservice.h  runtime.h  symbolservice.h  target.h
src/SOS/lldbplugin/: CMakeLists.txt  mstypes.h  services.cpp  services.h  sethostruntimecommand.cpp  setsostidcommand.cpp  soscommand.cpp  sosplugin.cpp  sosplugin.h
src/SOS/runcommand/: runcommand.vcxproj  runcommand_lldb.cpp
src/Tools/dotnet-dump/: Analyzer.cs  Dumper.cs  Program.cs  dotnet-dump.csproj
src/Tools/dotnet-sos/: dotnet-sos.csproj
src/Tools/dotnet-stack/: Symbolicate.cs
src/VS/: Directory.Build.props  Directory.Build.targets  VS.sln
src/VS/Microsoft.Diagnostics.SOSConcord/: ConsoleServiceFromConcordServices.cs  ContextServiceFromConcordServices.cs  MemoryServiceFromConcordServices.cs  Microsoft.Diagnostics.SOSConcord.csproj  Microsoft.Diagnostics.SOSConcord.vsdconfigxml  ModuleServiceFromConcordServices.cs  SOSConcordService.cs  SOSConcordServiceMessageId.cs  SOSPackageMessageId.cs  TargetFromConcordServices.cs  ThreadServiceFromConcordServices.cs
src/VS/Microsoft.Diagnostics.SOSPackage/: Microsoft.Diagnostics.SOSPackage.csproj  SOSPackage.cs  (+2 more)
src/dbgshim/: dbgshim.cpp  dbgshim.h  debugshim.cpp  debugshim.h
src/palrt/: CMakeLists.txt  bstr.cpp  comem.cpp  path.cpp
src/shared/: CMakeLists.txt  README.txt  shared.cmake
src/tests/: CMakeLists.txt
(+174 files in other folders)
